# Blockchain_Assisted_Federated_Learning_Simulation

./: FederatedTrainingCoordinator.sol  FederatedTrainingCoordinatorModule.ts  FederatedTrainingCoordinatorTest.js  README.md  blockchain_export.py  checkReputation.ts  checkUpdates.ts  client_app.py  collect_updates.py  generate_report.py  hardhat.config.ts  prepare_clients.py  pyproject.toml  requirements.txt  run_full_project.py  run_simulation.py  server_app.py  submitClientUpdates.ts  task.py  utils.py
Contracts/: FederatedTrainingCoordinator.sol
flwr_app/: client_app.py  server_app.py  task.py
ignition/mmodules/: FederatedTrainingCoordinatorModule.ts
ml/: blockchain_export.py  collect_updates.py  prepare_clients.py  run_simulation.py  utils.py
scripts/: checkReputation.ts  checkUpdates.ts  hardhat.config.ts  submitClientUpdates.ts
test/: FederatedTrainingCoordinatorTest.js
